Bruger compressed js

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/ui-lightness/jquery-ui-1.8.16.custom.css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.8.16.custom.min.js"></script>
-    <script type="text/javascript" src="js/cop-data.source.js"></script>
+    <script type="text/javascript" src="js/cop-data.js"></script>
     <script type="text/javascript" src="js/cop-plugin.js"></script>
 </head>
 <body>
@@ -14,7 +14,7 @@
 <article>
     <form  action="http://www.kb.dk/editions/any/2009/jul/editions/da/" method="get">
         <div class="ui-widget">
-            <input type="text" name="query" id="input" value=""/>
+            <input type="text" name="query" id="input" value="" style="width:70%"/>
             <input type="hidden" name="itemsPerPage" valeue="40"/>
             <input type="hidden" name="mode" valeue="thumbnail"/>
             <input type="submit" value="Submit">
